# job_storage

./: LICENSE  README.md
backend/: .dockerignore  .env  .gitignore  Dockerfile  Makefile  app.py  docker-compose.yml  docs.yaml  pyproject.toml
backend/job_storage_api/: __init__.py  __main__.py
backend/job_storage_api/db/: __init__.py  alembic.ini  scheme.drawio  test.py
backend/job_storage_api/db/connection/: __init__.py  session.py
backend/job_storage_api/db/migration/: env.py
backend/job_storage_api/db/migration/versions/: 0329f9c59f3d_.py  18f7f31a135d_.py  2de1aacb7e94_.py  5647b1d1a1a9_.py  5ae1d250184b_.py  7a89cb350ae3_.py  a1782f0b4264_.py  cda9c4317c06_.py
backend/job_storage_api/db/models/: __init__.py  resume.py  test.json  user.py  vacancy.py
backend/job_storage_api/routers/: __init__.py  avito.py  hh.py  parse.py  rabota.py  resume.py  user.py  vacancy.py
backend/job_storage_api/routers/parse_utils/: hh.py  rabota.py
backend/job_storage_api/schemas/: __init__.py  register.py  resume_request.py  vacancies_filter.py  vacancy.py  vacancy_update.py
backend/job_storage_api/utils/: config.py
mobile/: README.md  pubspec.yaml
mobile/android/app/: build.gradle
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/lib/Design/: Images.dart
mobile/lib/Edit_Resume/: Field.dart  First_Edit_Page.dart  Five_Edit_Page.dart  Fourth_Edit_Page.dart  Progress_bar.dart  Resume.dart  Second_Edit_Page.dart  (+1 more)
mobile/test/: widget_test.dart
mobile/web/: index.html  manifest.json
(+11 files in other folders)
