[tool.poetry]
name = "job-storage-api"
version = "0.0.1"
description = ""
authors = ["ionic101 <iv.osipov2004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
sqlalchemy = "^2.0.36"
python-dotenv = "^1.0.1"
uvicorn = "^0.32.0"
alembic = "^1.13.3"
sqlalchemy-utils = "^0.41.2"
psycopg2 = "^2.9.10"
url-normalize = "^1.4.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
